# football-analytics

./: .databricks.example.yml  .gitignore  DATABRICKS_BUNDLE.md  databricks.yml  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: databricks-bundle-deploy.yml
dbt/: dbt_project.yml  profiles.yml.example
dbt/macros/: normalize_name.sql  unique_combination_of_columns.sql
dbt/models/: sources.yml
dbt/seeds/: fifa_mens_world_ranking_december_2022.csv
football_analytics/: __init__.py  config.py  databricks_ingestion.py  modeling.py  orchestrator.py  pipeline.py  reporting.py
football_analytics/api/: __init__.py  client.py  exceptions.py  retry.py
football_analytics/databricks/: __init__.py  config.py  logging.py  ops_views.py  tables.py  widgets.py
football_analytics/ingestion/: __init__.py
football_analytics/quality/: __init__.py  validators.py
notebooks/: 00_prepare_run.py  01_bronze_api_ingest.py  01_bronze_ingest.py  02_silver_normalize.py  02_silver_validate_normalize.py  03_gold_build.py  03_gold_feature_build.py  04_quality_checks.py  05_orchestrate_worldcup_run.py  databricks_ingest_worldcup.ipynb  databricks_ingest_worldcup.py  legacy_world_cup_2026_ingest.ipynb
resources/: international_medallion_pipeline.yml  worldcup_pipeline.yml
tests/: test_databricks_bundle_and_config.py  test_databricks_ingestion.py  test_databricks_logging.py  test_databricks_ops_views.py  test_modeling.py  test_orchestrator.py  test_pipeline.py  test_quality_and_storage.py  test_reporting.py  test_resilient_api_client.py
(+12 files in other folders)
