[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-analytics"
version = "0.1.0"
description = "Football analytics ingestion and Databricks workflow utilities."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "jinja2>=3.1.2",
]

[tool.setuptools.packages.find]
include = ["football_analytics*"]
